--- a/firstpage.html
+++ b/firstpage.html
@@ -14,7 +14,7 @@
 
   <div class="bg-image"></div>
 <div class="bg-text">
-  <h1><img src="image\ADlogo.png" alt=""/></h1>
+  <h1><img src="group-project\image\ADlogo.png" alt=""/></h1>
   <p><em>We provide you with <strong style="color:red;">easy crowd-pleasing drinks & dessert recipes.</strong></p>
   <br>
   <a href="group-project\index.html" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Welcome</a>
