--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/aboutpagestyle.css">
+    <link rel="stylesheet" href="css/homepagestyle.css">
   </head>
 
     <body>
     <header>
-      <!-- Navigation for the about page-->
+      <!-- Navigation -->
       <div class="header">
     			<div class="logo">
     				<h1><a href="#"><img src="image\ADlogo.png" alt=""/</a></h1>
     			</div>
     			<div class="top-nav">
     				<ul>
-    					<li><a href="#">Home</a></li>
-    					<li><a class="active" href=".\firstpage.html">About</a></li>
+    					<li><a href=".\firstpage.html">Home</a></li>
+    					<li><a href="#">About</a></li>
     					<li><a href="#">Menu</a></li>
     					<li><a href="#">Contant</a></li>
     				</ul>
