--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       <!-- Navigation -->
       <div class="header">
     			<div class="logo">
-    				<h1><a href="#"><img src="image\ADlogo.png" alt=""/</a></h1>
+    				<h1><a href=".\firstpage.html"><img src="image\ADlogo.png" alt=""/</a></h1>
     			</div>
     			<div class="top-nav">
     				<ul>
-    					<li><a href=".\firstpage.html">Home</a></li>
     					<li><a  class="active" href="#">About</a></li>
     					<li><a href="#">Menu</a></li>
     					<li><a href="#">Contant</a></li>
+              <li><a href="#">Contant</a></li>
     				</ul>
     <!-- end of Navigation -->
     	</header>
