--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -17,7 +17,7 @@
 			<div class="top-nav">
 				<ul>
 					<li><a class="active" href="homepage.html">Home</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="about.html">About</a></li>
 					<li><a href="drinksanddessert.html">Menu</a></li>
 					<li><a href="#">My Account</a></li>
           <li><a href="#">Contact</a></li>
