chnages to the homepage-together!!

--- a/HTML/firstpage.html
+++ b/HTML/firstpage.html
@@ -9,13 +9,13 @@
 
 <body>
 
-  <div class="bg-image"></div>
-<div class="bg-text">
-  <h1><img src="images\ADlogo.png" alt=""/></h1>
-  <p><em>We provide you with <strong style="color:red;">easy crowd-pleasing drinks & dessert recipes.</strong></p>
+  <h1>We are <br>After Dinner.</h1>
   <br>
-  <a href="homepage.html" id="button" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">Welcome</a>
-  </div>
+  <div class="button">
+<a href="homepage.html"><button type="button">Let's Go</button></a>
+</div>
+
+
 
 
 
