--- a/HTML/drinkpage.html
+++ b/HTML/drinkpage.html
@@ -28,6 +28,9 @@
     <br>
     <br>
     <br>
+    <a href="alcnonalc.html" class="button"><button class="btn btn-link btn-lg">Back</button></a>
+
+
     <br>
     <!-- Alcoholic drinks -->
     <div id="drinks">
