--- a/HTML/non-drinks.html
+++ b/HTML/non-drinks.html
@@ -26,9 +26,9 @@
   <!-- end of Navigation -->
   	</header>
     <br>
-    <br>
-    <br>
-    <br>
+  <br>
+  <br>
+  <a href="alcnonalc.html" class="button"><button class="btn btn-link btn-lg">Back</button></a>
     <!-- Alcoholic drinks -->
     <div id="drinks">
           <p class="lead">Non-Alcoholic Drinks</p>
