--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -12,7 +12,7 @@
   <!-- Navigation -->
   <div class="header">
 			<div class="logo">
-				<h1><a href="homepage.html"><img src="images\ADlogo.png" alt=""/</a></h1>
+				<h1><a href="homepage.html"><img src="images\logo.png" alt=""/</a></h1>
 			</div>
 			<div class="top-nav">
 				<ul>
@@ -27,6 +27,9 @@
 <br>
 <br>
 <br>
+<a href="firstpage.html" class="button"><button class="btn btn-link btn-lg">Back</button></a>
+
+
 <br>
 <div id="welcomehome">
   <h1>Welcome To After Dinner</h1>
