--- a/HTML/firstpage.html
+++ b/HTML/firstpage.html
@@ -12,7 +12,7 @@
   <h1>We are <br>After Dinner.</h1>
   <br>
   <div class="button">
-<a href="homepage.html"><button type="button">Let's Go</button></a>
+<a href="about.html"><button type="button">Let's Go</button></a>
 </div>
 
 
