--- a/HTML/homepage.html
+++ b/HTML/homepage.html
@@ -16,11 +16,11 @@
 			</div>
 			<div class="top-nav">
 				<ul>
-					<li><a class="active" href="homepage.html">Home</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="drinksanddessert.html">Menu</a></li>
-					<li><a href="#">My Account</a></li>
+          <li><a class="active" href="homepage.html">Blog</a></li>
           <li><a href="#">Contact</a></li>
+
 				</ul>
 <!-- end of Navigation -->
 	</header>
@@ -32,7 +32,7 @@
 
 <br>
 <div id="welcomehome">
-  <h1>Welcome To After Dinner</h1>
+  <h1>After Dinner: Blog</h1>
   <p class="lead">The <strong>HOME</strong> of Easy Crowd-Pleasing Recipes.</p>
   <br>
   <br>
