--- a/HTML/recipe.html
+++ b/HTML/recipe.html
@@ -152,10 +152,26 @@ body, html {
 
 
 <!-- Footer -->
-<div class="contrast">
-  <p>
-  <h2>Got a suggestion?</h2>
-
-  We'd love to know! Reach out to us at <a href="mailto:hello@afterdinner.com">hello@afterdinner.com</a><br><br>
-</p>
+<center>
+<div class="contrast" style="background-color:#fffff">
+  <br>
+  <h2 style="color:#212844; margin: 20px;">Got a suggestion?</h2>
+  <p style="color:#212844; margin: 20px;">We'd love to know! Reach out to us at <a href="mailto:hello@afterdinner.com" style="color:pink;">hello@afterdinner.com</a>
+  </p><br>
 </div>
+</center>
+
+<!-- social media icons -->
+<footer class="panel-footer" align="center">
+  <a href="#" class="social" target="_blank">
+    <img title="Twitter" alt="Twitter" class="socialbutton" src="https://socialmediawidgets.files.wordpress.com/2014/03/01_twitter.png" width="45" height="45" />
+  </a>
+  <a href="#" class="social" target="_blank">
+    <img title="Facebook" alt="Facebook" class="socialbutton" src="https://socialmediawidgets.files.wordpress.com/2014/03/02_facebook.png" width="45" height="45" />
+  </a>
+    <a href="#" class="social" target="_blank">
+    <img title="Instagram" alt="Instagram" class="socialbutton" src="https://socialmediawidgets.files.wordpress.com/2014/03/10_instagram.png" width="45" height="45" />
+  </a>
+  <br>
+  <br>
+  </footer>
