--- a/HTML/nonbakeddessert.html
+++ b/HTML/nonbakeddessert.html
@@ -58,10 +58,10 @@
         </div>
         <!--dessert 3-->
         <div class="col-sm-4">
-          <img src="images\gresize.jpg" alt="Image" class="img img-responsive">
+          <img src="images\gluten-free-tiramisu-slice.jpg" alt="Image" class="img img-responsive">
           <div class="overlay">
-            <a href="roses.html">
-              <div class="text center-text"> no</div>
+            <a href="recipe.html">
+              <div class="text center-text"> Easy Tiramisu</div>
             </a>
           </div>
         </div>
