--- a/menu.html
+++ b/menu.html
@@ -15,13 +15,13 @@
   <!-- Navigation -->
   <div class="header">
 			<div class="logo">
-				<h1><a href="about.html"><img src="images\logo.png" alt=""/</a></h1>
+				<h1><a href="index.html"><img src="images\logo.png" alt=""/</a></h1>
 			</div>
 			<div class="top-nav">
 				<ul>
 					<li><a href="about.html">About</a></li>
 					<li><a class="active" href="menu.html">Menu</a></li>
-        
+
           <li><a href="contact.html">Contact</a></li>
 				</ul>
 <!-- end of Navigation -->
