changes to text in about.html

--- a/about.html
+++ b/about.html
@@ -40,11 +40,11 @@
               <p>After Dinner is a platform that provides you with mouth-watering</p>
               <p><strong>dessert and drink recipes,</strong> that will blow your audience away!</p>
               <br>
-              <p>We have foraged through the cook books and the web to find you <strong>easy</strong>
-              recipes that can be completed in no-time.</p>
+              <p>We have foraged through the cook books and the web to find you</p>
+              <p><strong>easy</strong>recipes that can be completed in no-time.</p>
               <br>
-              <p>Whether you're a chocolate lover, fan of a cheeky cocktail,
-              or simply looking for fun new recipes to try; we have a recipe for you!</p>
+              <p>Whether you're a chocolate lover, fan of a cheeky cocktail,or<p>
+              <p>simply looking for fun new recipes to try; we have a recipe for you!</p>
             </div>
               </div>
 
